<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center">

        <!-- Name and Age. Used to display values passed back from second Activity -->
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name" />
        <EditText
            android:id="@+id/etNameInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/label_age" />
        <EditText
            android:id="@+id/etAgeInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
        <Button android:id="@+id/btnnext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_activity" />

        <!-- EditTexts for calculator -->
        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_number" />

        <EditText
            android:id="@+id/etFirstNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_number" />
        <EditText
            android:id="@+id/etSecondNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />"

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_result" />

        <EditText
            android:id="@+id/etShowResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

        <!-- Calculator buttons -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add" />
            <Button android:id="@+id/btnSubtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Subtract" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Multiply" />
            <Button android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Divide" />
            <Button android:id="@+id/btnFactorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Factorial" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
